--- a/about.html
+++ b/about.html
@@ -49,11 +49,35 @@
 
         <br>
 
-        <h2>Artist Statement</h2>
-        <p>Like polyphony in music, Werfel’s work consists of textures of multiple independent voices. In her recent paintings, she employs a wide vocabulary of marks which slyly reference the influence of Photoshop on contemporary visual culture. A shallow space, in which a combination of clearly defined graphical lines and stencils sit on the surface, contrasts with a more ambiguous environment made up of naturalistic gestures that fade in and out of focus like a distant memory. In her process-driven series of mono-prints the removal of the hand suggests this dichotomy even more strongly.</p>
-        <p>Recent travels abroad have influenced Werfel’s work. Inspired by a stay in Singapore in 2015 where she taught at Yale-NUS College, Werfel began to layer stencils over her gestural brush marks. In 2016 while a visiting artist at the American Academy in Rome, she renewed her interest in Baroque ceiling paintings and incorporated their spatial complexity into her compositions.</p>
-        <p>Trained at Columbia University, the New York Studio School and Hamilton College, Werfel has been featured in numerous exhibitions. Recent solo exhibitions include the Coombs Gallery at American University of Paris, Prince Street Gallery in NYC, and the Mondavi Winery in Napa, CA. She has been awarded residencies at the American Academy in Rome, the Rockefeller Foundation’s Bellagio Center in Italy, the Djerassi Foundation in California, the Virginia Center for the Creative Arts, and Yosemite National Park. In 2017, she completed a public art commission Thicket for Burnett Miller Park in McKinley Village in Sacramento.</p>
-        <p>Werfel is a Professor of Art at University of California Davis.</p>
+        <h2>Artist Statement/Bio</h2>
+        <p>My current paintings and works on paper involve textures of multiple voices.
+        Clearly defined graphical lines and stencils sit on the surface of a shallow space,
+        in tension with a more ambiguous environment of naturalistic gestures, which
+        fade in and out of focus like distant memories. The layering, and the contrast
+        between stencilled and hand-drawn marks in a wide vocabulary of signs, make
+        reference to the influence of Photoshop on contemporary visual culture. The
+        removal of the hand in my recent series of process-driven mono-prints highlights
+        this dichotomy.</p>
+        <p>Recent travels abroad have influenced my work. Inspired by a stay in Singapore
+        in 2015 where I taught at Yale-NUS College, I began to employ spray-painted
+        stencils over my gestural brush marks, making use of everyday textured
+        materials as well as Chinese New Year’s decorations from Singapore. In 2016
+        while a visiting artist at the American Academy in Rome, I renewed my interest in
+        Baroque ceiling paintings and incorporated their spatial complexity into my
+        compositions. I began to empty out the center and vary the density of marks.</p>
+        <p>My work has been featured in numerous exhibitions in the U.S. and abroad.
+        Recent solo exhibitions include the Coombs Gallery at American University of
+        Paris, France, Korn Gallery at Drew University, New Jersey, Prince Street
+        Gallery in New York City, and the Mondavi Winery in Napa, CA. I have been
+        awarded residencies at the American Academy in Rome, the Rockefeller
+        Foundation’s Bellagio Center in Italy, the Djerassi Foundation in California, the
+        Virginia Center for the Creative Arts, the International School of Painting in
+        Montecastello di Vibio, Italy and Yosemite National Park. In 2017, I completed a
+        multi-part public art commission Clearing for Burnett Miller Park in McKinley
+        Village in Sacramento.</p>
+        <p>I received my MFA at Columbia University, a certificate at the New York Studio
+        School and a BA from Hamilton College. I am currently a Professor of Art at
+        University of California Davis.</p>
 
       </div>
     </div>
