--- a/public art.html
+++ b/public art.html
@@ -27,6 +27,13 @@
 
     <!-- Content wrapper pads the margins from the header and footer -->
     <div class="content-wrapper">
+      <div class="gallery-description">
+        <h2>Clearing</h2>
+        <p>Clearing is an integrated network of abstract and abstracting objects. Seven interlocking porcelain enamel panels line the central pathway, ranging in size from six feet to eighteen inches high. Panels create abstractions of both site and instillation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
+        <p>The centerpiece of Sacramento’s Burnett Miller Park, Clearing mediates surface, depth-of-field, and perspective.</p>
+        <p>Assisted by Galen Pardee</p>
+        <p>Photography by Joan Cusick And Injinash Unshin</p>
+      </div>
       <!-- Gallery container -->
       <div class="gallery">
         <!-- Gallery navigation by clicking to the right or left of images -->
@@ -42,8 +49,11 @@
           <img class="gallery-img" src="./images/public art/JCP_0806-X3.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0807-X3.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0829-X3.jpg">
+          <img class="gallery-img" src="./images/public art/11_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0841-X3.jpg">
+          <img class="gallery-img tall" src="./images/public art/7_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0845-X3.jpg">
+          <img class="gallery-img tall" src="./images/public art/3_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0952-X3.jpg">
         </div>
         
@@ -63,9 +73,12 @@
           <img class="gallery-icon" onclick="currentImg(5)" src="./images/public art/icons/JCP_0806-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(6)" src="./images/public art/icons/JCP_0807-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(7)" src="./images/public art/icons/JCP_0829-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" src="./images/public art/icons/JCP_0841-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" src="./images/public art/icons/JCP_0845-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" src="./images/public art/icons/JCP_0952-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" src="./images/public art/icons/11_o icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" src="./images/public art/icons/JCP_0841-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" src="./images/public art/icons/7_o icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(11)" src="./images/public art/icons/JCP_0845-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" src="./images/public art/icons/3_o icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/public art/icons/JCP_0952-X3 icon.jpg">
         </div>
       </div>
     </div>
